feat: break indexing into 2 passes